# computer_graphics

./: .gitignore  .travis.yml  README.md
OpenGL_1/: README.md
OpenGL_1/src/: Helpers.h  main.cpp
OpenGL_3d/: README.md
OpenGL_3d/data/: cube.off  sphere.off
OpenGL_3d/src/: Helpers.cpp  Helpers.h  main.cpp
ray_tracing/: CMakeLists.txt  README.md
ray_tracing/src/: shape.h  utils.cpp
src/: main.cpp  shape.cpp  shape.h  utils.h
